--- a/.github/workflows/Sync.yml
+++ b/.github/workflows/Sync.yml
@@ -1,16 +1,41 @@
-name: main
-on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: '30 1 1,15 * *'
-jobs:
-  build:
+# This is a basic workflow to help you get started with Actions
 
-    runs-on: windows-2019
+name: CTI
+
+# Controls when the workflow will run
+on: 
+  schedule:
+    - cron: '*/5 * * * *'
+  # Triggers the workflow on push or pull request events but only for the main branch
+  #push:
+  #  branches: [ main ]
+  #pull_request:
+  #  branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  #workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Check out repo        
-        uses: actions/checkout@v2
-      - run: |
-          ./Exitnodes.ps1      
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+     
+      - name: setup git config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "shivam@borninthecloud.com"
+          
+      # Runs a single command using the runners shell
+      - name: Set permission
+        run: chmod u+r+x script.sh
+        
+      # Runs a single command using the runners shell
+      - name: Run Script
+        run: bash ./Exitnodes.ps1
